# stellarium-skyculture-converter

./: .appveyor.yml  .gitignore  AsterismOldLoader.cpp  AsterismOldLoader.hpp  CMakeLists.txt  ConstellationOldLoader.cpp  ConstellationOldLoader.hpp  Converter.cpp  Converter.hpp  DescriptionOldLoader.cpp  DescriptionOldLoader.hpp  NamesOldLoader.cpp  NamesOldLoader.hpp  README.md  SkyCultureConverter.cpp  SkyCultureConverter.hpp  Utils.cpp  Utils.hpp  main.cpp
cmake/: FindLibTidy.cmake
